<resources>
    <string name="app_name">Dictionary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="display">TextView</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">首页</string>
    <string name="nav_note">生词本</string>
    <string name="nav_web">网页</string>
    <string name="nav_logout">退出登录</string>
    <string name="nav_cancel">注销账号</string>
</resources>
