<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
<!--使用自己图片，不加处理的话会导致掉帧严重-->
    <group android:checkableBehavior="single"
           android:id="@+id/group1">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/nav_note" />
        <item
            android:id="@+id/nav_cnki"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/nav_web" />

    </group>
    <group android:id="@+id/group2"
           android:checkableBehavior="single">
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_logout"/>
        <item android:id="@+id/nav_cancel"
            android:icon="@drawable/ic_cancel_black_24dp"
            android:title="@string/nav_cancel"/>
    </group>

</menu>
